# App

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  main.cpp  resources.qrc
App/: CMakeLists.txt  Main.qml  app.rc  config.default.ini  config.h  main.cpp
App/Auth/: AuthManager.cpp  AuthManager.h  AuthState.h  CMakeLists.txt  JwtUtils.h  PermissionManager.cpp  PermissionManager.h  RolePermissions.h  SecureTokenStorage.cpp
App/Auth/UI/: LoginPage.qml  UserMenuPopup.qml
App/Auth/ui/: LoginPage.qml  LogoutDialog.qml  UserMenuPopup.qml
App/Components/: Avatar.qml  Button.qml  ButtonGroup.qml  CMakeLists.txt  CheckBox.qml  Cluster.qml  ComboBox.qml  DatePicker.qml  DateTime.qml  GlobalBackground.qml  GlobalBackgroundConsumer.qml  HorizontalDivider.qml  HorizontalPadding.qml  HorizontalSpacer.qml  InputCoordinate.qml  InputShield.qml  Modal.qml  OutlineRect.qml  Overlay.qml  SearchBar.qml  Slider.qml  Switcher.qml  TextArea.qml  Title.qml  ToastNotification.qml  TrackIcon.qml  TrackIconLabel.qml  VerticalDivider.qml  VerticalPadding.qml  VerticalSpacer.qml  VesselIcon.qml
App/Components/accordion/: Accordion.qml  AccordionStyle.qml  AccordionStyles.qml
App/Components/alert-banner/: AlertBanner.qml  AlertBannerStyle.qml  AlertBannerStyles.qml
App/Components/button/: Button.qml  ButtonStyle.qml  ButtonStyles.qml
App/Components/date-time-picker/: DatePicker.qml  DatePickerActions.qml  DatePickerCalendarView.qml  DatePickerDay.qml  DatePickerHeader.qml  DatePickerMonthView.qml  DatePickerYearView.qml  DateTimePicker.qml  DateTimePickerDay.qml  DateTimePickerField.qml  DateTimePickerPopup.qml  TimePicker.qml
App/Components/floating-window/: FloatingWindow.qml  WindowRouter.qml  windowRoutes.js
App/Components/forms/: EllipseFormBase.qml  PointFormBase.qml  PolygonFormBase.qml  RectangleFormBase.qml
App/Components/input/: Input.qml  InputStyle.qml  InputStyles.qml
App/Components/shapes/: EditableEllipse.qml  EditablePoint.qml  EditablePolygon.qml  EditableRectangle.qml  ShapeLabel.qml
App/Components/title/: Title.qml  TitleController.qml
App/Components/toast/: ToastContainer.qml  ToastNotification.qml
App/Components/toggle/: Toggle.qml  ToggleStyle.qml  ToggleStyles.qml
App/Components/wizard-page/: WizardPage.qml
App/Features/: CMakeLists.txt
App/Features/AlertZone/: AlertZonePanel.qml  CMakeLists.txt
App/Features/Arrivals/: CMakeLists.txt  ShipArrivalController.cpp  ShipArrivalController.h
App/Features/Auth/: CMakeLists.txt  LoginPage.qml  UserMenuPopup.qml
App/Features/ContextPanel/: routes.js  (+3 more)
App/Logger/: AppLogger.h  CMakeLists.txt  PoiLogger.h  app_logger.h  app_logger_export.h  console_sink.h  ilogsink.h  log_record.h  log_types.h  logger.h  logger_poi.cpp  sink_registry.h  sqlite_sink.h
App/Networking/: CMakeLists.txt  Debouncer.cpp  Debouncer.h  HttpClient.cpp  HttpClient.h  NetworkingLogger.h
App/Playground/: AccordionPanel.qml  ButtonGroupTest.qml  ButtonPanel.qml  CMakeLists.txt  ClusterPanel.qml  ComboBoxPanel.qml  DateTimePickerPanel.qml  DateTimeTest.qml  FontTest.qml  IconButtonsTest.qml  ModalDialogPanel.qml  ModalPanel.qml  OverlayPanel.qml  SliderPanel.qml  SwitcherPanel.qml  TextAreaPanel.qml  TogglePanel.qml  WizardPageTest.qml
App/StubComponents/: Button.qml  CMakeLists.txt  DateTime.qml  README.md  SearchBar.qml  StubDateTime.qml  StubSearchBar.qml  StubTitle.qml  Title.qml
App/Tests/: ButtonsTest.qml  CMakeLists.txt  IconButtonsTest.qml
App/Themes/: AppPalette.qml  BaseTheme.qml  CMakeLists.txt  Theme.qml  Themes.qml  tst_Theme.qml  tst_runner.cpp
App/config/: mqtt_config.json
App/connections/: ApiEndpoints.cpp  ApiEndpoints.h  apiendpoints.h  httpclient.cpp
App/core/: AuthManager.cpp  AuthManager.h  AuthService.cpp  AuthService.h  GeoSelectionUtils.h  LayerManager.cpp  LayerManager.h  PoiOptions.cpp  PoiOptions.h  SecureTokenStorage.cpp  TrackManager.cpp  TrackManager.h  interactionmodemanager.h  layermanager.cpp  layermanager.h  trackmanager.cpp  variantlistmodel.h
App/entities/: AlertZone.h  AlertZoneNotification.h  AuthTokens.h  BaseTrack.h  ClusteredPayload.h  Details.h  Geometry.h  HistoryPoint.h  MapCluster.h  NotificationTrackData.h  Poi.h  Tir.h  Track.h  TruckNotification.h  UserSession.h  Velocity.h  Vessel.h  shape.h
App/events/: selectionboxbus.h
App/layers/: AISTrackMapLayer.qml  AlertZoneMapLayer.qml  AlertZoneMapLayerController.cpp  AlertZoneMapLayerController.h  AnnotationMapLayer.cpp  AnnotationMapLayer.h  BaseLayer.cpp  BaseLayer.h  BaseMapLayer.cpp  BaseMapLayer.h  BaseMapLayer.qml  BaseTrackMapLayer.cpp  BaseTrackMapLayer.h  DocSpaceTrackMapLayer.qml  Layers.h  LayersPanel.qml  MOCPoIStaticLayer.qml  PoiMapLayer.cpp  PoiMapLayer.h  PoiMapLayer.qml  PoiMapLayerController.cpp  PoiMapLayerController.h  TirMapLayer.cpp  TirMapLayer.h  TirTrackMapLayer.qml  TrackMapLayer.cpp  TrackMapLayer.h  VesselFinderMapLayer.qml  VesselMapLayer.cpp  VesselMapLayer.h  annotationmaplayer.cpp  annotationmaplayer.h  baselayer.cpp  baselayer.h  basemaplayer.cpp  basemaplayer.h  staticpoimaplayer.h  trackmaplayer.cpp  trackmaplayer.h
App/map-objects/: AlertZoneEllipse.qml  AlertZonePolygon.qml  AlertZoneRectangle.qml  CircleMarker.qml  HistoryOverlay.qml  HistoryPath.qml  HistoryStartPoint.qml  MOCPoiPoint.qml  MapCluster.qml  PoiEllipse.qml  PoiPoint.qml  PoiPolygon.qml  PoiRectangle.qml  Tir.qml  Track.qml  TriangleHeading.qml  Vessel.qml
App/models/: AlertZoneModel.cpp  AlertZoneModel.h  AlertZoneNotificationModel.cpp  AlertZoneNotificationModel.h  BaseTrackModel.cpp  BaseTrackModel.h  ClusterModel.cpp  ClusterModel.h  CoordinatesModel.h  ModelHelper.cpp  ModelHelper.h  PoiModel.cpp  PoiModel.h  TirModel.cpp  TirModel.h  TrackModel.cpp  TrackModel.h  TruckNotificationModel.cpp  TruckNotificationModel.h  VesselModel.cpp  VesselModel.h  poi.h
App/persistence/: alertzonepersistencemanager.cpp  alertzonepersistencemanager.h  ipersistencemanager.h  persistencemanagerbase.h  poipersistencemanager.cpp  shapepersistencemanager.cpp
logging/: CMakeLists.txt
logging/logging/: ilogsink.h  logger.h
(+561 files in other folders)
